--- a/docs/_layouts/poster-template.html
+++ b/docs/_layouts/poster-template.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>$title$</title>
+    <title>{{page.title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
@@ -20,15 +20,11 @@
         {% endcapture %}
 
         {% capture pageContentStyle %}
-            {% if workshop.bg-img%} 
-                background-image: url({{workshop.bg-img}});
-            {% endif %}
-            {% if variation.text-color %}color:{{variation.text-color}}; border-color: {{variation.text-color}} !important;{% endif %}
+            {% if workshop.bg-img%}background-image: url({{workshop.bg-img}});{% endif %}{% if variation.text-color %}color:{{variation.text-color}}; border-color: {{variation.text-color}} !important;{% endif %}
         {% endcapture %}
 
         {% capture overlayStyle %}
-        {% if variation.ov-color %}background-color: {{variation.ov-color}}{% endif %}
-        {% if variation.ov-opacity %}opacity: {{variation.ov-opacity}}{% endif %}
+        {% if variation.ov-color %}background-color: {{variation.ov-color}}{% endif %}{% if variation.ov-opacity %}opacity: {{variation.ov-opacity}}{% endif %}
         {% endcapture %}
 
         <page size="A3" {% if variation.landscape %}layout="landscape"{% endif %}>
