Testing changes in poster yaml

--- a/_layouts/workshop-poster.html
+++ b/_layouts/workshop-poster.html
@@ -17,7 +17,7 @@
             {% endcapture %}
 
             {% capture pageContentStyle %}
-                {% if page.workshop.bg-img%}background-image: url({{page.workshop.bg-img}});{% endif %}{% if variation.text-color %}color:{{variation.text-color}}; border-color: {{variation.text-color}} !important;{% endif %}
+                {% if page.bg-img%}background-image: url({{page.bg-img}});{% endif %}{% if variation.text-color %}color:{{variation.text-color}}; border-color: {{variation.text-color}} !important;{% endif %}
             {% endcapture %}
 
             {% capture overlayStyle %}
@@ -39,28 +39,28 @@
                             </div>
                         </div>
                         <div class="right">
-                            {% for logo in page.workshop.collaborator-logos %}
+                            {% for logo in page.collaborator-logos %}
                             <img src="{{logo}}" alt="" class="logo" style="{{text-color}}">
                             {% endfor %}
                         </div>
                     </div>
                     <div class="page-body">
                         <div class="date">
-                            <span class="month">{{page.workshop.date.month}}</span>
-                            <span class="day">{{page.workshop.date.day}}</span>
-                            <span class="year">{{page.workshop.date.year}}</span>
+                            <span class="month">{{page.date.month}}</span>
+                            <span class="day">{{page.date.day}}</span>
+                            <span class="year">{{page.date.year}}</span>
                         </div>
-                        <h1 class="title">{{page.workshop.title}}</h1>
-                        <h4 class="subtitle">{{page.workshop.subtitle}}</h4>
+                        <h1 class="title">{{page.title}}</h1>
+                        <h4 class="subtitle">{{page.subtitle}}</h4>
                         <div class="description">
-                            <p>{{page.workshop.description}}</p>
+                            <p>{{page.description}}</p>
                             
                         </div>
                     </div>
                     <div class="page-footer">
                         <div class="schedule">
                             <div class="table">
-                                {% for item in page.workshop.shedule %}         
+                                {% for item in page.shedule %}         
                                     <div style="{{text-color}}">
                                             <h4>{{item.name}}</h4>
                                             {% for detail in item.details %}                             
