--- a/_layouts/workshop-poster.html
+++ b/_layouts/workshop-poster.html
@@ -46,9 +46,9 @@
                     </div>
                     <div class="page-body">
                         <div class="date">
-                            <span class="month">{{page.date.month}}</span>
-                            <span class="day">{{page.date.day}}</span>
-                            <span class="year">{{page.date.year}}</span>
+                            <span class="month">{{page.dates.month}}</span>
+                            <span class="day">{{page.dates.day}}</span>
+                            <span class="year">{{page.dates.year}}</span>
                         </div>
                         <h1 class="title">{{page.title}}</h1>
                         <h4 class="subtitle">{{page.subtitle}}</h4>
