Fixed social icons

--- a/_layouts/A3-poster.html
+++ b/_layouts/A3-poster.html
@@ -74,7 +74,7 @@
                             </div>
                         </div> 
                         <div class="social-links">
-                            {% for socialItem in author.social %}                              
+                            {% for socialItem in site.author.social %}                              
                             <div class="icon">
                                 <i class="{{socialItem.icon}}"></i>
                                 <span>{{socialItem.account}}</span>
