Added changes to v2 poster suggested by noelia

--- a/_layouts/A3-poster-v2.html
+++ b/_layouts/A3-poster-v2.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{{page.title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="assets/css/poster.css" />
+    <link rel="stylesheet" type="text/css" href="../assets/css/poster.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
         integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
         cFK2aPAZSrossorigin="anonymous">
@@ -63,6 +63,8 @@
                 <div class="description">
                     <p>{{page.description}}</p>
                 </div>
+            </div>
+            <div class="page-footer">
                 <div class="schedule">
                     <div class="table">
                         {% for item in page.schedule %}
@@ -75,8 +77,15 @@
                         {% endfor %}
                     </div>
                 </div>
-            </div>
-            <div class="page-footer">
+                <div class="details">
+                    <p class="address">{{page.address}}</p>
+                    <p class="price">
+                        {% for item in page.pricing %}
+                        {% unless item.type == "Price" %}<span class="sep">|</span>{% endunless %}<b>{{item.type}}</b> —
+                        {{item.price}}€
+                        {% endfor %}
+                    </p>
+                </div>
                 <div class="social-links">
                     {% for socialItem in site.author.social %}
                     <div class="icon">
