Fixed missing fontawesome icons

--- a/_layouts/A3-poster-v2.html
+++ b/_layouts/A3-poster-v2.html
@@ -6,10 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{{page.title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="../assets/css/poster.css" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
-        integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
-        cFK2aPAZSrossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{{site.baseurl}}assets/css/poster.css" />
+    <script src="https://kit.fontawesome.com/bb2d58b770.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
