--- a/_layouts/A3-poster-v2.html
+++ b/_layouts/A3-poster-v2.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{{page.title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="{{site.baseurl}}assets/css/poster.css" />
+    <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/assets/css/poster.css" />
     <script src="https://kit.fontawesome.com/bb2d58b770.js" crossorigin="anonymous"></script>
 </head>
 
