--- a/assets/css/poster.scss
+++ b/assets/css/poster.scss
@@ -233,6 +233,7 @@ page[size="A5"][layout="landscape"] {
   }
 
   .inscriptions {
+    border-radius: 5pt;
     border: 1px solid white;
     font-size: 160%;
     padding: 0.2em;
